--- a/recipes/khao-soi.html
+++ b/recipes/khao-soi.html
@@ -9,8 +9,9 @@
 </head>
 
 <body style="background:whitesmoke; display:flex; flex-direction:column; align-items:center; justify-items:center; padding:40px;padding-top:0px">
-    <h1 style="font-size:2.5rem; padding:10px; border-top:solid 4px #FFC86D;border-bottom:solid 4px #FFC86D">Khao Soi Soup</h1>
-    <div style="display:flex; gap:30px; margin-top:30px">
+    <a style="position:absolute; left:40px;top:40px; text-decoration:none;box-shadow: 2px 2px 5px gray; background:#E74242cc;border-radius:10px; padding:5px;color:white; font-weight:600" href="../index.html">Go Back</a>
+    <h1 style="font-size:2.5rem;max-width:600px;text-align:center; padding:10px; border-top:solid 4px #FFC86D;border-bottom:solid 4px #FFC86D">Khao Soi Soup</h1>
+    <div style="display:flex; max-width:1000px;gap:30px; margin-top:30px">
         <img style="width:50%;max-width: 500px; object-fit:cover; border-radius:20px; box-shadow: 2px 2px 4px #000000aa"
         src="https://img.delicious.com.au/fPpsva5i/del/2021/07/chicken-coconut-curry-noodle-soup-recipe-thai-khao-soi-155681-3.jpg">
         <div>
@@ -44,7 +45,7 @@
 </div>
 </div>
 <h2 style="margin-bottom:0; margin-top:20px">STEPS</h3>
-    <ol style="width:full;max-width:800px;padding-right:15px;background: rgba(149, 214, 118, 0.65);border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding-top:15px; padding-bottom:15px">
+    <ol style="display:flex; flex-direction:column; gap:15px;width:full;max-width:1000px;padding-right:15px;background: rgba(149, 214, 118, 0.65);border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding-top:15px; padding-bottom:15px">
         <li>Heat 2 tablespoons oil in a wok or large skillet over medium heat; cook and stir chopped shallots and garlic
             until garlic starts to turn golden, 2 to 4 minutes. Add red curry paste and curry powder; cook and stir
             until fragrant, 1 to 2 minutes. Add coconut milk, water, chicken, and sea salt; bring to a boil. Reduce heat
