--- a/recipes/som-tam.html
+++ b/recipes/som-tam.html
@@ -9,8 +9,9 @@
 </head>
 
 <body style="background:whitesmoke; display:flex; flex-direction:column; align-items:center; justify-items:center; padding:40px;padding-top:0px">
-    <h1 style="font-size:2.5rem; padding:10px; border-top:solid 4px #FFC86D;border-bottom:solid 4px #FFC86D">Green Papaya Salad (Som Tam Malakor)</h1>
-    <div style="display:flex; gap:30px; margin-top:30px">
+    <a style="position:absolute; left:40px;top:40px; text-decoration:none;box-shadow: 2px 2px 5px gray; background:#E74242cc;border-radius:10px; padding:5px;color:white; font-weight:600" href="../index.html">Go Back</a>
+    <h1 style="font-size:2.5rem;max-width:600px;text-align:center; padding:10px; border-top:solid 4px #FFC86D;border-bottom:solid 4px #FFC86D">Green Papaya Salad (Som Tam Malakor)</h1>
+    <div style="display:flex;max-width:1000px; gap:30px; margin-top:30px">
         <img style="width:50%;max-width: 500px; object-fit:cover; border-radius:20px; box-shadow: 2px 2px 4px #000000aa"
             src="https://www.allrecipes.com/thmb/c5lGrN2OiPiZU97T2XZ0Rw1xopY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Som-Tam-Malakor-Green-Papaya-Salad-2000-ec87b4dcd85041c991d11ec6a1ab5f30.jpg">
         <div>
@@ -37,7 +38,7 @@
         </div>
     </div>
     <h2 style="margin-bottom:0; margin-top:20px">STEPS</h3>
-        <ol style="width:full;max-width:800px;padding-right:15px;background: rgba(149, 214, 118, 0.65);border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding-top:15px; padding-bottom:15px">
+        <ol style="display:flex; flex-direction:column; gap:15px; width:full;max-width:1000px;padding-right:15px;background: rgba(149, 214, 118, 0.65);border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding-top:15px; padding-bottom:15px">
             <li>Preheat the oven to 350 degrees F (175 degrees C). Place peanuts on a baking sheet.</li>
             <li>Toast in the preheated oven until fragrant and browned, 7 to 8 minutes. Let cool for 5 minutes.</li>
             <li>Grind roasted peanuts, Thai chilies, garlic, dried shrimp, and sugar in a mortar and pestle or food
