title fix- readme screenshots update

--- a/recipes/som-tam.html
+++ b/recipes/som-tam.html
@@ -10,7 +10,7 @@
 
 <body style="background:whitesmoke; display:flex; flex-direction:column; align-items:center; justify-items:center; padding:40px;padding-top:0px">
     <a style="position:absolute; left:40px;top:40px; text-decoration:none;box-shadow: 2px 2px 5px gray; background:#E74242cc;border-radius:10px; padding:5px;color:white; font-weight:600" href="../index.html">Go Back</a>
-    <h1 style="font-size:2.5rem;max-width:600px;text-align:center; padding:10px; border-top:solid 4px #FFC86D;border-bottom:solid 4px #FFC86D">Green Papaya Salad (Som Tam Malakor)</h1>
+    <h1 style="font-size:2.5rem;max-width:600px;text-align:center; padding:10px; border-top:solid 4px #FFC86D;border-bottom:solid 4px #FFC86D">Green Papaya Salad<br>(Som Tam Malakor)</h1>
     <div style="display:flex;max-width:1000px; gap:30px; margin-top:30px">
         <img style="width:50%;max-width: 500px; object-fit:cover; border-radius:20px; box-shadow: 2px 2px 4px #000000aa"
             src="https://www.allrecipes.com/thmb/c5lGrN2OiPiZU97T2XZ0Rw1xopY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Som-Tam-Malakor-Green-Papaya-Salad-2000-ec87b4dcd85041c991d11ec6a1ab5f30.jpg">
