odin css lesson : add css stylesheets

--- a/recipes/som-tam.html
+++ b/recipes/som-tam.html
@@ -5,40 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Green Papaya Salad (Som Tam Malakor)</title>
 </head>
 
-<body style="background:whitesmoke; display:flex; flex-direction:column; align-items:center; justify-items:center; padding:40px;padding-top:0px">
-    <a style="position:absolute; left:40px;top:40px; text-decoration:none;box-shadow: 2px 2px 5px gray; background:#E74242cc;border-radius:10px; padding:5px;color:white; font-weight:600" href="../index.html">Go Back</a>
-    <h1 style="font-size:2.5rem;max-width:600px;text-align:center; padding:10px; border-top:solid 4px #FFC86D;border-bottom:solid 4px #FFC86D">Green Papaya Salad<br>(Som Tam Malakor)</h1>
-    <div style="display:flex;max-width:1000px; gap:30px; margin-top:30px">
-        <img style="width:50%;max-width: 500px; object-fit:cover; border-radius:20px; box-shadow: 2px 2px 4px #000000aa"
+<body>
+    <a href="../index.html">Go Back</a>
+    <h1>Green Papaya Salad<br>(Som Tam Malakor)</h1>
+    <div class="container_upper">
+        <img
             src="https://www.allrecipes.com/thmb/c5lGrN2OiPiZU97T2XZ0Rw1xopY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Som-Tam-Malakor-Green-Papaya-Salad-2000-ec87b4dcd85041c991d11ec6a1ab5f30.jpg">
         <div>
             <h2>DESCRIPTION</h2>
-                <p style="width:90%;background: #95d676a6;border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding:15px">This papaya salad is light and refreshing. I can easily eat a giant bowl of it
-                    and be completely satisfied. And as an extra bonus, this salad is pretty healthy. I sometimes add
-                    extra chiles because I enjoy a lot of heat. That's what is great about this recipe, it is easily
-                    customized to suit individual tastes.</p>
-                <h2>INGREDIENTS</h2>
-                    <ul style="width:90%; background: rgba(149, 214, 118, 0.65);border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding-top:15px; padding-bottom:15px">
-                        <li>¼ cup peanuts</li>
-                        <li>2 Thai chiles, chopped</li>
-                        <li>3 cloves garlic</li>
-                        <li>1 tablespoon dried shrimp</li>
-                        <li>1 tablespoon white sugar</li>
-                        <li>2 medium limes, juiced</li>
-                        <li>2 tablespoons fish sauce</li>
-                        <li>1 medium papaya - peeled, seeded, and sliced</li>
-                        <li>1 cup cherry tomatoes, halved</li>
-                        <li>¼ cup fresh green beans, cut into 1-inch pieces</li>
-                        <li>½ medium carrot, peeled and shredded</li>
-                        <li>salt and ground black pepper to taste</li>
-                    </ul>
+            <p>This papaya salad is light and refreshing. I can easily eat a giant bowl of it
+                and be completely satisfied. And as an extra bonus, this salad is pretty healthy. I sometimes add
+                extra chiles because I enjoy a lot of heat. That's what is great about this recipe, it is easily
+                customized to suit individual tastes.</p>
+            <h2>INGREDIENTS</h2>
+            <ul>
+                <li>¼ cup peanuts</li>
+                <li>2 Thai chiles, chopped</li>
+                <li>3 cloves garlic</li>
+                <li>1 tablespoon dried shrimp</li>
+                <li>1 tablespoon white sugar</li>
+                <li>2 medium limes, juiced</li>
+                <li>2 tablespoons fish sauce</li>
+                <li>1 medium papaya - peeled, seeded, and sliced</li>
+                <li>1 cup cherry tomatoes, halved</li>
+                <li>¼ cup fresh green beans, cut into 1-inch pieces</li>
+                <li>½ medium carrot, peeled and shredded</li>
+                <li>salt and ground black pepper to taste</li>
+            </ul>
         </div>
     </div>
-    <h2 style="margin-bottom:0; margin-top:20px">STEPS</h3>
-        <ol style="display:flex; flex-direction:column; gap:15px; width:full;max-width:1000px;padding-right:15px;background: rgba(149, 214, 118, 0.65);border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding-top:15px; padding-bottom:15px">
+    <h2>STEPS</h3>
+        <ol>
             <li>Preheat the oven to 350 degrees F (175 degrees C). Place peanuts on a baking sheet.</li>
             <li>Toast in the preheated oven until fragrant and browned, 7 to 8 minutes. Let cool for 5 minutes.</li>
             <li>Grind roasted peanuts, Thai chilies, garlic, dried shrimp, and sugar in a mortar and pestle or food
