--- a/recipes/khao-soi.html
+++ b/recipes/khao-soi.html
@@ -5,60 +5,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Khao Soi Soup</title>
 </head>
 
-<body style="background:whitesmoke; display:flex; flex-direction:column; align-items:center; justify-items:center; padding:40px;padding-top:0px">
-    <a style="position:absolute; left:40px;top:40px; text-decoration:none;box-shadow: 2px 2px 5px gray; background:#E74242cc;border-radius:10px; padding:5px;color:white; font-weight:600" href="../index.html">Go Back</a>
-    <h1 style="font-size:2.5rem;max-width:600px;text-align:center; padding:10px; border-top:solid 4px #FFC86D;border-bottom:solid 4px #FFC86D">Khao Soi Soup</h1>
-    <div style="display:flex; max-width:1000px;gap:30px; margin-top:30px">
-        <img style="width:50%;max-width: 500px; object-fit:cover; border-radius:20px; box-shadow: 2px 2px 4px #000000aa"
-        src="https://img.delicious.com.au/fPpsva5i/del/2021/07/chicken-coconut-curry-noodle-soup-recipe-thai-khao-soi-155681-3.jpg">
+<body>
+    <a href="../index.html">Go Back</a>
+    <h1>Khao Soi Soup</h1>
+    <div class="container_upper">
+        <img
+            src="https://img.delicious.com.au/fPpsva5i/del/2021/07/chicken-coconut-curry-noodle-soup-recipe-thai-khao-soi-155681-3.jpg">
         <div>
             <h2>DESCRIPTION</h2>
-            <p style="width:90%;background: #95d676a6;border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding:15px">From northern Thailand, a noodle soup with an amazing mix of flavor and texture. My mom made this for me
-        recently, and I fell in love with it. It is a variation on a recipe about street food she found in her local
-        paper. It is quite flavorful, so if you prefer a less spicy dish, reduce the amount of spices.</p>
-        <h2>INGREDIENTS</h2>
-        <ul style="width:90%; background: rgba(149, 214, 118, 0.65);border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding-top:15px; padding-bottom:15px">
-        <li>2 tablespoons vegetable oil</li>
-        <li>3 shallots, chopped</li>
-        <li>3 cloves garlic, minced</li>
-        <li>¼ cup red curry paste</li>
-        <li>1 tablespoon curry powder</li>
-        <li>4 cups coconut milk</li>
-        <li>2 cups water</li>
-        <li>2 cups chopped cooked chicken, or more to taste</li>
-        <li>1 teaspoon sea salt</li>
-        <li>2 tablespoons fish sauce</li>
-        <li>2 tablespoons white sugar</li>
-        <li>1 tablespoon lime juice</li>
-        <li>½ cup vegetable oil</li>
-        <li>12 whole dried Thai chile peppers</li>
-        <li>6 small shallots, cut into quarters</li>
-        <li>½ head bok choy, chopped</li>
-        <li>1 (8 ounce) package rice noodles</li>
-        <li>1 cup pickled mustard cabbage, thinly sliced (Optional)</li>
-        <li>½ cup coarsely chopped fresh cilantro</li>
-        <li>1 lime, cut into wedges</li>
-    </ul>
-</div>
-</div>
-<h2 style="margin-bottom:0; margin-top:20px">STEPS</h3>
-    <ol style="display:flex; flex-direction:column; gap:15px;width:full;max-width:1000px;padding-right:15px;background: rgba(149, 214, 118, 0.65);border-radius: 16px;box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);border: 3px solid rgba(149, 214, 118, 0.3); border-radius:10px;padding-top:15px; padding-bottom:15px">
-        <li>Heat 2 tablespoons oil in a wok or large skillet over medium heat; cook and stir chopped shallots and garlic
-            until garlic starts to turn golden, 2 to 4 minutes. Add red curry paste and curry powder; cook and stir
-            until fragrant, 1 to 2 minutes. Add coconut milk, water, chicken, and sea salt; bring to a boil. Reduce heat
-            to medium low and simmer soup. </li>
-        <li>Mix fish sauce, sugar, and lime juice into soup and simmer until heated through, about 10 minutes more.</li>
-        <li>Heat 1/2 cup oil in a skillet over medium-high heat; fry Thai chile peppers until browned, 2 to 4 minutes.
-            Transfer chile peppers to soup, reserving oil in skillet. Fry quartered shallots and bok choy in hot oil
-            until browned, 2 to 4 minutes; transfer to soup and reserve oil in skillet.</li>
-        <li>Place noodles in a large bowl and cover with hot water. Set aside until noodles are softened, about 15
-            minutes. Drain and rinse thoroughly. Add 3/4 of the noodles to the soup. Fry the remaining rice noodles in
-            the hot oil until crisp, 3 to 5 minutes.</li>
-        <li>Divide soup among 6 bowls and top with fried noodles, pickled cabbage, cilantro, and lime wedges.</li>
-    </ol>
+            <p>From northern Thailand, a noodle soup with an amazing mix of flavor and texture. My mom made this for me
+                recently, and I fell in love with it. It is a variation on a recipe about street food she found in her
+                local
+                paper. It is quite flavorful, so if you prefer a less spicy dish, reduce the amount of spices.</p>
+            <h2>INGREDIENTS</h2>
+            <ul>
+                <li>2 tablespoons vegetable oil</li>
+                <li>3 shallots, chopped</li>
+                <li>3 cloves garlic, minced</li>
+                <li>¼ cup red curry paste</li>
+                <li>1 tablespoon curry powder</li>
+                <li>4 cups coconut milk</li>
+                <li>2 cups water</li>
+                <li>2 cups chopped cooked chicken, or more to taste</li>
+                <li>1 teaspoon sea salt</li>
+                <li>2 tablespoons fish sauce</li>
+                <li>2 tablespoons white sugar</li>
+                <li>1 tablespoon lime juice</li>
+                <li>½ cup vegetable oil</li>
+                <li>12 whole dried Thai chile peppers</li>
+                <li>6 small shallots, cut into quarters</li>
+                <li>½ head bok choy, chopped</li>
+                <li>1 (8 ounce) package rice noodles</li>
+                <li>1 cup pickled mustard cabbage, thinly sliced (Optional)</li>
+                <li>½ cup coarsely chopped fresh cilantro</li>
+                <li>1 lime, cut into wedges</li>
+            </ul>
+        </div>
+    </div>
+    <h2>STEPS</h3>
+        <ol>
+            <li>Heat 2 tablespoons oil in a wok or large skillet over medium heat; cook and stir chopped shallots and
+                garlic
+                until garlic starts to turn golden, 2 to 4 minutes. Add red curry paste and curry powder; cook and stir
+                until fragrant, 1 to 2 minutes. Add coconut milk, water, chicken, and sea salt; bring to a boil. Reduce
+                heat
+                to medium low and simmer soup. </li>
+            <li>Mix fish sauce, sugar, and lime juice into soup and simmer until heated through, about 10 minutes more.
+            </li>
+            <li>Heat 1/2 cup oil in a skillet over medium-high heat; fry Thai chile peppers until browned, 2 to 4
+                minutes.
+                Transfer chile peppers to soup, reserving oil in skillet. Fry quartered shallots and bok choy in hot oil
+                until browned, 2 to 4 minutes; transfer to soup and reserve oil in skillet.</li>
+            <li>Place noodles in a large bowl and cover with hot water. Set aside until noodles are softened, about 15
+                minutes. Drain and rinse thoroughly. Add 3/4 of the noodles to the soup. Fry the remaining rice noodles
+                in
+                the hot oil until crisp, 3 to 5 minutes.</li>
+            <li>Divide soup among 6 bowls and top with fried noodles, pickled cabbage, cilantro, and lime wedges.</li>
+        </ol>
 </body>
 
 </html>
