--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container_main">
         <h1>Odin Recipes: <span>Best Thai Dishes</span></h1>
-        <img src="https://www.mashed.com/img/gallery/the-best-thai-food-you-probably-havent-tried-yet/l-intro-1650989408.jpg">
+        <img src="https://www.mashed.com/img/gallery/the-best-thai-food-you-probably-havent-tried-yet/l-intro-1650989408.jpg" alt="thai dishes examples">
         <div class="container_links">
             <a href="recipes/som-tam.html">Green Papaya Salad (Som Tam Malakor)</a>
             <a href="recipes/khao-soi.html">Khao Soi Soup</a>
