--- a/recipes/khao-soi.html
+++ b/recipes/khao-soi.html
@@ -14,7 +14,7 @@
     <h1>Khao Soi Soup</h1>
     <div class="container_upper">
         <img
-            src="https://img.delicious.com.au/fPpsva5i/del/2021/07/chicken-coconut-curry-noodle-soup-recipe-thai-khao-soi-155681-3.jpg">
+            src="https://img.delicious.com.au/fPpsva5i/del/2021/07/chicken-coconut-curry-noodle-soup-recipe-thai-khao-soi-155681-3.jpg" alt="khao soi soup photo">
         <div>
             <h2>DESCRIPTION</h2>
             <p>From northern Thailand, a noodle soup with an amazing mix of flavor and texture. My mom made this for me
