--- a/recipes/som-tam.html
+++ b/recipes/som-tam.html
@@ -14,7 +14,7 @@
     <h1>Green Papaya Salad<br>(Som Tam Malakor)</h1>
     <div class="container_upper">
         <img
-            src="https://www.allrecipes.com/thmb/c5lGrN2OiPiZU97T2XZ0Rw1xopY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Som-Tam-Malakor-Green-Papaya-Salad-2000-ec87b4dcd85041c991d11ec6a1ab5f30.jpg">
+            src="https://www.allrecipes.com/thmb/c5lGrN2OiPiZU97T2XZ0Rw1xopY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Som-Tam-Malakor-Green-Papaya-Salad-2000-ec87b4dcd85041c991d11ec6a1ab5f30.jpg" alt="thai papaya salad photo">
         <div>
             <h2>DESCRIPTION</h2>
             <p>This papaya salad is light and refreshing. I can easily eat a giant bowl of it
